# QRTC

./: .gitignore  CMakeLists.txt  QRTC.cpp  QRTC.h  README.md
examples/: example1.c
headers/: CocoBeanInternal.hpp  TorpedoRayInternal.hpp  color.h  color.hpp  hittable.h  hittable.hpp  image.hpp  onb.hpp  qrtc_internal.hpp  ray.h  ray.hpp  rgb.hpp  rng.hpp  sphere.h  sphere.hpp  vec3.h  vec3.hpp
include/: CocoBean.hpp  TorpedoRay.hpp  qrtc.h  qrtc.hpp
sources/: color.c  color.cpp  ray.cpp  vec3.c  vec3.cpp
src/: camera.hpp  color.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  image.cpp  interval.hpp  main.cpp  qrtc.hpp  ray.hpp  sphere.hpp  vec3.hpp
tests/: prog1.c  prog1.cpp  prog2.cpp
